--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^8.13.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.1",
+    "resend": "^4.4.0",
     "web-push": "^3.6.7"
   }
 }
